Closed Bug 1228422 Opened 9 years ago Closed 9 years ago

Error 'nsISocketProvider::AddToSocket': function does not take 8 arguments. Need to adjust nsLDAPSecurityGlue.cpp for changes from bug 1200802

Categories

(MailNews Core :: LDAP Integration, defect)

defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 45.0

People

(Reporter: mkmelin, Assigned: mkmelin)

References

Details

Attachments

(1 file)

comm-central is currently busted  from bug 1200802
Attachment #8692631 - Flags: review?(philip.chee)
Blocks: 1200802
Keywords: regression
Let's make this build failure accessible to search queries:
> ldap/xpcom/src/nsLDAPSecurityGlue.cpp(178): 
> error C2660: 'nsISocketProvider::AddToSocket': function does not take 8 arguments
Summary: adjust nsLDAPSecurityGlue.cpp for changes from bug 1200802 → Error 'nsISocketProvider::AddToSocket': function does not take 8 arguments. Need to adjust nsLDAPSecurityGlue.cpp for changes from bug 1200802
Comment on attachment 8692631 [details] [diff] [review]
bugXXX_adjust_nsLDAPSecurityGlue.patch

r=me a=Bustage Fix
Attachment #8692631 - Flags: review?(philip.chee) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 45.0
Version: 38 → 45
Severity: blocker → critical
Keywords: dogfood, regression
OS: Unspecified → All
Hardware: Unspecified → All
(why change severity, it was indeed blocking dev)
Severity: critical → blocker
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: