Bug 1228422 - adjust nsLDAPSecurityGlue for changes from bug 1200802. r=philip.chee

--HG--
extra : amend_source : bf40a439f0b956bbfd02249a7011e9809b546c0f